correcting experience and skill models and adding more unit and contract tests
